--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16565,6 +16565,7 @@ server=/btnotes.com/114.114.114.114
 server=/btoo3.com/114.114.114.114
 server=/btophr.com/114.114.114.114
 server=/btorange.com/114.114.114.114
+server=/btosolar.com/114.114.114.114
 server=/btp-pharm.com/114.114.114.114
 server=/btpig.com/114.114.114.114
 server=/btplay.net/114.114.114.114
