accelerated-domains: add digitwater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26506,6 +26506,7 @@ server=/digitalwuhan.net/114.114.114.114
 server=/digitimetech.com/114.114.114.114
 server=/digitlink.net/114.114.114.114
 server=/digitser.net/114.114.114.114
+server=/digitwater.com/114.114.114.114
 server=/digiwin.com/114.114.114.114
 server=/digiwoods.com/114.114.114.114
 server=/digiwork.com/114.114.114.114
