--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34009,6 +34009,7 @@ server=/gdwsa.com/114.114.114.114
 server=/gdwse.com/114.114.114.114
 server=/gdwxyf.com/114.114.114.114
 server=/gdwz.com/114.114.114.114
+server=/gdxdy.com/114.114.114.114
 server=/gdxfl.com/114.114.114.114
 server=/gdxindun.com/114.114.114.114
 server=/gdxinqiang168.com/114.114.114.114
