--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34035,6 +34035,7 @@ server=/gdyunyin.net/114.114.114.114
 server=/gdyxc.com/114.114.114.114
 server=/gdz.co/114.114.114.114
 server=/gdzgy.com/114.114.114.114
+server=/gdzhcx.com/114.114.114.114
 server=/gdzhiding.com/114.114.114.114
 server=/gdzhongshan.com/114.114.114.114
 server=/gdzp.org/114.114.114.114
