accelerated-domains: add ltplighting.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58361,6 +58361,7 @@ server=/ltopto.com/114.114.114.114
 server=/ltp-cloud.com/114.114.114.114
 server=/ltp.ai/114.114.114.114
 server=/ltplayer.com/114.114.114.114
+server=/ltplighting.com/114.114.114.114
 server=/ltpower.net/114.114.114.114
 server=/ltsbbs.com/114.114.114.114
 server=/ltsc.vip/114.114.114.114
