accelerated-domains: add shenling.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75853,6 +75853,7 @@ server=/shenkelong.com/114.114.114.114
 server=/shenkexin.com/114.114.114.114
 server=/shenkong.net/114.114.114.114
 server=/shenlanbao.com/114.114.114.114
+server=/shenling.com/114.114.114.114
 server=/shenliyang.com/114.114.114.114
 server=/shenma-inc.com/114.114.114.114
 server=/shenma.com/114.114.114.114
