--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92686,6 +92686,7 @@ server=/ximalaya.tv/114.114.114.114
 server=/ximalayadata.com/114.114.114.114
 server=/ximalayaos.com/114.114.114.114
 server=/ximeiapp.com/114.114.114.114
+server=/ximeigroup.com/114.114.114.114
 server=/ximendou.com/114.114.114.114
 server=/ximgs.net/114.114.114.114
 server=/ximiplay.com/114.114.114.114
