--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33869,6 +33869,7 @@ server=/gdggkf.com/114.114.114.114
 server=/gdghg.com/114.114.114.114
 server=/gdgkty.com/114.114.114.114
 server=/gdgrsw.com/114.114.114.114
+server=/gdguangdong.com/114.114.114.114
 server=/gdgudong.com/114.114.114.114
 server=/gdguozhi.com/114.114.114.114
 server=/gdgwyw.com/114.114.114.114
