accelerated-domains: add ghed119.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34535,6 +34535,7 @@ server=/ghc168.com/114.114.114.114
 server=/ghcec.com/114.114.114.114
 server=/ghcis.com/114.114.114.114
 server=/ghcxzb.com/114.114.114.114
+server=/ghed119.com/114.114.114.114
 server=/gheigot.com/114.114.114.114
 server=/gheqien.com/114.114.114.114
 server=/ghglzx.com/114.114.114.114
