accelerated-domains: add dggq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26077,6 +26077,7 @@ server=/dgggs.com/114.114.114.114
 server=/dgghy.com/114.114.114.114
 server=/dggjqw.com/114.114.114.114
 server=/dggjyy.com/114.114.114.114
+server=/dggq.com/114.114.114.114
 server=/dggywx.com/114.114.114.114
 server=/dghgzm.com/114.114.114.114
 server=/dghobo17.com/114.114.114.114
