--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36207,6 +36207,7 @@ server=/guangxiyijie.com/114.114.114.114
 server=/guangxizbq.com/114.114.114.114
 server=/guangxizhonghui.com/114.114.114.114
 server=/guangxizhutingqi.com/114.114.114.114
+server=/guangyi.net/114.114.114.114
 server=/guangyinghj.com/114.114.114.114
 server=/guangyinglvxing.com/114.114.114.114
 server=/guangyuanjt.com/114.114.114.114
