--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41160,6 +41160,7 @@ server=/hechangquan.com/114.114.114.114
 server=/hechangshipin.com/114.114.114.114
 server=/hechangtech.com/114.114.114.114
 server=/hechengbb.com/114.114.114.114
+server=/hechengeco.com/114.114.114.114
 server=/hechiguotou.com/114.114.114.114
 server=/hechijinxin.com/114.114.114.114
 server=/hechuang.info/114.114.114.114
