--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40910,6 +40910,7 @@ server=/hcsvipc.com/114.114.114.114
 server=/hcswgx.com/114.114.114.114
 server=/hctxf.org/114.114.114.114
 server=/hcty.com/114.114.114.114
+server=/hcvac.com/114.114.114.114
 server=/hcvs.net/114.114.114.114
 server=/hcwebsite.com/114.114.114.114
 server=/hcwh.ltd/114.114.114.114
