accelerated-domains: add hoilon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42864,6 +42864,7 @@ server=/hogon17.com/114.114.114.114
 server=/hogyp.com/114.114.114.114
 server=/hoho666.com/114.114.114.114
 server=/hohode.com/114.114.114.114
+server=/hoilon.com/114.114.114.114
 server=/hoing.net/114.114.114.114
 server=/hojonn.com/114.114.114.114
 server=/hokori.online/114.114.114.114
