accelerated-domains: add qtctc.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70977,6 +70977,7 @@ server=/qtbig.com/114.114.114.114
 server=/qtbtp.com/114.114.114.114
 server=/qtccolor.com/114.114.114.114
 server=/qtcn.org/114.114.114.114
+server=/qtctc.org/114.114.114.114
 server=/qtdebug.com/114.114.114.114
 server=/qtdream.com/114.114.114.114
 server=/qteng.net/114.114.114.114
