accelerated-domains: add rbotai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72044,6 +72044,7 @@ server=/rbi-china.com/114.114.114.114
 server=/rbift.icu/114.114.114.114
 server=/rbischina.org/114.114.114.114
 server=/rbladycrusaders.com/114.114.114.114
+server=/rbotai.com/114.114.114.114
 server=/rbqq.com/114.114.114.114
 server=/rbsr0.icu/114.114.114.114
 server=/rbtxw.com/114.114.114.114
