accelerated-domains: add senhai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74840,6 +74840,7 @@ server=/senguo.cc/114.114.114.114
 server=/senguo.com/114.114.114.114
 server=/sengxian.com/114.114.114.114
 server=/sengzai.com/114.114.114.114
+server=/senhai.com/114.114.114.114
 server=/senhe.com/114.114.114.114
 server=/senior.auto/114.114.114.114
 server=/seniverse.com/114.114.114.114
