--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104502,6 +104502,7 @@ server=/zzstep.com/114.114.114.114
 server=/zzszbsw.com/114.114.114.114
 server=/zzszxyy.com/114.114.114.114
 server=/zzt9.com/114.114.114.114
+server=/zztender.com/114.114.114.114
 server=/zztfly.com/114.114.114.114
 server=/zzthjixie.com/114.114.114.114
 server=/zztline.com/114.114.114.114
