--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1617,6 +1617,7 @@ server=/163cn.tv/114.114.114.114
 server=/163cp.com/114.114.114.114
 server=/163cs.com/114.114.114.114
 server=/163fen.com/114.114.114.114
+server=/163guangdong.com/114.114.114.114
 server=/163gz.com/114.114.114.114
 server=/163hot.net/114.114.114.114
 server=/163img.com/114.114.114.114
