--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3953,6 +3953,7 @@ server=/3cjob.com/114.114.114.114
 server=/3conline.com/114.114.114.114
 server=/3cpp.org/114.114.114.114
 server=/3ct.cc/114.114.114.114
+server=/3d-chips.com/114.114.114.114
 server=/3d-stereovision.com/114.114.114.114
 server=/3d2000.com/114.114.114.114
 server=/3d66.com/114.114.114.114
