--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33910,6 +33910,7 @@ server=/gdkjb.com/114.114.114.114
 server=/gdkjw.com/114.114.114.114
 server=/gdks168.com/114.114.114.114
 server=/gdkszx.com/114.114.114.114
+server=/gdkxpcb.com/114.114.114.114
 server=/gdkz88.com/114.114.114.114
 server=/gdlgsw.com/114.114.114.114
 server=/gdlighting.com/114.114.114.114
