--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34256,6 +34256,7 @@ server=/geogsci.com/114.114.114.114
 server=/geoharbour.com/114.114.114.114
 server=/geohey.com/114.114.114.114
 server=/geoidc.com/114.114.114.114
+server=/geolong.com/114.114.114.114
 server=/geometryauto.com/114.114.114.114
 server=/geons.host/114.114.114.114
 server=/georginaarmadas.com/114.114.114.114
