--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38917,6 +38917,7 @@ server=/gyxuan.com/114.114.114.114
 server=/gyxx.com/114.114.114.114
 server=/gyxx365.com/114.114.114.114
 server=/gyyb.com/114.114.114.114
+server=/gyycc.com/114.114.114.114
 server=/gyypw.com/114.114.114.114
 server=/gyyuli.com/114.114.114.114
 server=/gyyywcpx.com/114.114.114.114
