accelerated-domains: add winnerway.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89371,6 +89371,7 @@ server=/winner-rbt.com/114.114.114.114
 server=/winner9.com/114.114.114.114
 server=/winnermicro.com/114.114.114.114
 server=/winnerracing.com/114.114.114.114
+server=/winnerway.com/114.114.114.114
 server=/winnet.cc/114.114.114.114
 server=/winning11cn.com/114.114.114.114
 server=/winnyefanho.net/114.114.114.114
