--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94124,6 +94124,7 @@ server=/xn--yet74fr8g.com/114.114.114.114
 server=/xn--ygtp21bwyedsq.com/114.114.114.114
 server=/xn--yhqq38bmov17mqxi.com/114.114.114.114
 server=/xn--z3vq3r3u4a.xn--czr694b/114.114.114.114
+server=/xn--z63a11k.com/114.114.114.114
 server=/xn--zwtr2f7xebqvx24ax9a.xn--3ds443g/114.114.114.114
 server=/xn-ck.com/114.114.114.114
 server=/xn121.com/114.114.114.114
