accelerated-domains: add euroasia-p.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30273,6 +30273,7 @@ server=/eumt.com/114.114.114.114
 server=/euratao.com/114.114.114.114
 server=/eureka.name/114.114.114.114
 server=/eurkon.com/114.114.114.114
+server=/euroasia-p.com/114.114.114.114
 server=/eurochinesedaily.com/114.114.114.114
 server=/eurofinscn.com/114.114.114.114
 server=/europapa.com/114.114.114.114
