accelerated-domains: add gdstc.group

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33971,6 +33971,7 @@ server=/gdspeedtest.com/114.114.114.114
 server=/gdsports.net/114.114.114.114
 server=/gdsrcw.com/114.114.114.114
 server=/gdsstl.com/114.114.114.114
+server=/gdstc.group/114.114.114.114
 server=/gdstlab.com/114.114.114.114
 server=/gdsuxie.com/114.114.114.114
 server=/gdswgc.com/114.114.114.114
