accelerated-domains: add mason-led.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59947,6 +59947,7 @@ server=/masjfc.com/114.114.114.114
 server=/masjinquan.com/114.114.114.114
 server=/maslimin.com/114.114.114.114
 server=/maslong.com/114.114.114.114
+server=/mason-led.com/114.114.114.114
 server=/maspiece.com/114.114.114.114
 server=/masqhboat.com/114.114.114.114
 server=/mass-evo.com/114.114.114.114
