--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18687,6 +18687,7 @@ server=/cellwise-semi.com/114.114.114.114
 server=/celwk.com/114.114.114.114
 server=/cement365.com/114.114.114.114
 server=/cementren.com/114.114.114.114
+server=/cemho.com/114.114.114.114
 server=/cemyun.com/114.114.114.114
 server=/cen-li.com/114.114.114.114
 server=/cenano-china.com/114.114.114.114
