accelerated-domains: add owgels.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66998,6 +66998,7 @@ server=/oway.mobi/114.114.114.114
 server=/owecn.com/114.114.114.114
 server=/oweidata.com/114.114.114.114
 server=/oweis-tech.com/114.114.114.114
+server=/owgels.com/114.114.114.114
 server=/owl-go.com/114.114.114.114
 server=/owl66.com/114.114.114.114
 server=/owlxjz.lol/114.114.114.114
