accelerated-domains: add avicsgt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12414,6 +12414,7 @@ server=/avic.com/114.114.114.114
 server=/avichina.com/114.114.114.114
 server=/avicnews.com/114.114.114.114
 server=/avicsec.com/114.114.114.114
+server=/avicsgt.com/114.114.114.114
 server=/avicui.com/114.114.114.114
 server=/avidbird.com/114.114.114.114
 server=/avinex.com/114.114.114.114
