accelerated-domains: add dongboauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27312,6 +27312,7 @@ server=/dongaocloud.com/114.114.114.114
 server=/dongbao120.com/114.114.114.114
 server=/dongbd.com/114.114.114.114
 server=/dongbeishifandaxue.com/114.114.114.114
+server=/dongboauto.com/114.114.114.114
 server=/dongbosy.com/114.114.114.114
 server=/dongbucaijing.com/114.114.114.114
 server=/dongcai.net/114.114.114.114
