--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33903,6 +33903,7 @@ server=/gdjinge.com/114.114.114.114
 server=/gdjingte.com/114.114.114.114
 server=/gdjiutu.com/114.114.114.114
 server=/gdjktk.com/114.114.114.114
+server=/gdjky.com/114.114.114.114
 server=/gdjs120.com/114.114.114.114
 server=/gdjshd.com/114.114.114.114
 server=/gdjsxh.com/114.114.114.114
