accelerated-domains: add gdnengyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33936,6 +33936,7 @@ server=/gdmusah.com/114.114.114.114
 server=/gdmuseum.com/114.114.114.114
 server=/gdmztv.com/114.114.114.114
 server=/gdmzw.com/114.114.114.114
+server=/gdnengyuan.com/114.114.114.114
 server=/gdnewmedia.cc/114.114.114.114
 server=/gdnfzb.com/114.114.114.114
 server=/gdniubang.com/114.114.114.114
