--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36182,6 +36182,7 @@ server=/guanglongsoft.com/114.114.114.114
 server=/guangmamuye.com/114.114.114.114
 server=/guangneng.shop/114.114.114.114
 server=/guangnengquan.com/114.114.114.114
+server=/guangsai.cc/114.114.114.114
 server=/guangshantang.vip/114.114.114.114
 server=/guangsuan.com/114.114.114.114
 server=/guangsuss.com/114.114.114.114
