--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36482,6 +36482,7 @@ server=/guochaos.com/114.114.114.114
 server=/guocuijingju.com/114.114.114.114
 server=/guodahulian.com/114.114.114.114
 server=/guodegang.org/114.114.114.114
+server=/guodi.net/114.114.114.114
 server=/guodingnet.com/114.114.114.114
 server=/guodongbaohe.com/114.114.114.114
 server=/guodongtech.com/114.114.114.114
