accelerated-domains: add jinqiunc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50295,6 +50295,7 @@ server=/jinqiaopu.com/114.114.114.114
 server=/jinqiexia.com/114.114.114.114
 server=/jinqijian.com/114.114.114.114
 server=/jinqingdz.com/114.114.114.114
+server=/jinqiunc.com/114.114.114.114
 server=/jinqunla.com/114.114.114.114
 server=/jinqunnet.com/114.114.114.114
 server=/jinri.red/114.114.114.114
