accelerated-domains: add sitong.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77602,6 +77602,7 @@ server=/siteonlinetest.com/114.114.114.114
 server=/sitetoad.com/114.114.114.114
 server=/sithc.com/114.114.114.114
 server=/sitiaoyu.com/114.114.114.114
+server=/sitong.net/114.114.114.114
 server=/sitongedu.org/114.114.114.114
 server=/sitongzixun.com/114.114.114.114
 server=/sitrigroup.com/114.114.114.114
