--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80301,6 +80301,7 @@ server=/sydimg.com/114.114.114.114
 server=/sydjwl.com/114.114.114.114
 server=/sydkidsedu.com/114.114.114.114
 server=/sydswxx.com/114.114.114.114
+server=/sydtgd.com/114.114.114.114
 server=/sydw8.com/114.114.114.114
 server=/sydxdl.com/114.114.114.114
 server=/syeg-ev.com/114.114.114.114
