--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80422,6 +80422,7 @@ server=/sysokean.com/114.114.114.114
 server=/sysrsksy.com/114.114.114.114
 server=/sysshine.com/114.114.114.114
 server=/systoon.com/114.114.114.114
+server=/sysu-pharm.com/114.114.114.114
 server=/sysucc.com/114.114.114.114
 server=/sysush.com/114.114.114.114
 server=/sysutest.xyz/114.114.114.114
