--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80893,6 +80893,7 @@ server=/szpldq.net/114.114.114.114
 server=/szpllp.com/114.114.114.114
 server=/szpmi.org/114.114.114.114
 server=/szporter.com/114.114.114.114
+server=/szpowerfly.com/114.114.114.114
 server=/szpowerpms.com/114.114.114.114
 server=/szps1688.com/114.114.114.114
 server=/szputy.com/114.114.114.114
