accelerated-domains: add xinsource.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93129,6 +93129,7 @@ server=/xinshuge.net/114.114.114.114
 server=/xinshuiny.com/114.114.114.114
 server=/xinshuru.com/114.114.114.114
 server=/xinsilu.com/114.114.114.114
+server=/xinsource.com/114.114.114.114
 server=/xinss.com/114.114.114.114
 server=/xinss.net/114.114.114.114
 server=/xinstall.com/114.114.114.114
