accelerated-domains: add zhukai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102243,6 +102243,7 @@ server=/zhujiwanjia.com/114.114.114.114
 server=/zhujiwiki.com/114.114.114.114
 server=/zhujiwu.com/114.114.114.114
 server=/zhujizixun.com/114.114.114.114
+server=/zhukai.com/114.114.114.114
 server=/zhukang.tech/114.114.114.114
 server=/zhukao666.com/114.114.114.114
 server=/zhuke.com/114.114.114.114
