--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17559,6 +17559,7 @@ server=/canpdu.com/114.114.114.114
 server=/canpoint.net/114.114.114.114
 server=/canrill.com/114.114.114.114
 server=/cansee.net/114.114.114.114
+server=/cansemitech.com/114.114.114.114
 server=/cansine.com/114.114.114.114
 server=/cantoge.com/114.114.114.114
 server=/cantonbio.com/114.114.114.114
