--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33892,6 +33892,7 @@ server=/gdhdbxg.com/114.114.114.114
 server=/gdhfny.com/114.114.114.114
 server=/gdhjzs.com/114.114.114.114
 server=/gdhtcm.com/114.114.114.114
+server=/gdhuana.com/114.114.114.114
 server=/gdhwater.com/114.114.114.114
 server=/gdicoou.com/114.114.114.114
 server=/gdie.com/114.114.114.114
