--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33943,6 +33943,7 @@ server=/gdnewmedia.cc/114.114.114.114
 server=/gdnfzb.com/114.114.114.114
 server=/gdniubang.com/114.114.114.114
 server=/gdnybank.com/114.114.114.114
+server=/gdofun.com/114.114.114.114
 server=/gdoip.com/114.114.114.114
 server=/gdokpackaging.com/114.114.114.114
 server=/gdomall.com/114.114.114.114
