--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82495,6 +82495,7 @@ server=/tianai391.com/114.114.114.114
 server=/tianan-cyber.com/114.114.114.114
 server=/tianan-insurance.com/114.114.114.114
 server=/tianan.net/114.114.114.114
+server=/tiananaq.com/114.114.114.114
 server=/tiananmenchenglou.com/114.114.114.114
 server=/tianapi.com/114.114.114.114
 server=/tianbaosi.com/114.114.114.114
