accelerated-domains: add gdkailin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33913,6 +33913,7 @@ server=/gdjuhan.com/114.114.114.114
 server=/gdjuntai.com/114.114.114.114
 server=/gdjyw.com/114.114.114.114
 server=/gdjzcw.com/114.114.114.114
+server=/gdkailin.com/114.114.114.114
 server=/gdkepler.com/114.114.114.114
 server=/gdkjb.com/114.114.114.114
 server=/gdkjw.com/114.114.114.114
