accelerated-domains: add gd-hstech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33793,6 +33793,7 @@ server=/gcyy08.com/114.114.114.114
 server=/gczyg.com/114.114.114.114
 server=/gd-chenxing.com/114.114.114.114
 server=/gd-hskj.com/114.114.114.114
+server=/gd-hstech.com/114.114.114.114
 server=/gd-id.com/114.114.114.114
 server=/gd-jinzhanggui.com/114.114.114.114
 server=/gd-lekai.com/114.114.114.114
