--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49403,6 +49403,7 @@ server=/jian-jie.com/114.114.114.114
 server=/jian.net/114.114.114.114
 server=/jian27.com/114.114.114.114
 server=/jianada-qianzheng.com/114.114.114.114
+server=/jianae.com/114.114.114.114
 server=/jianai.love/114.114.114.114
 server=/jianai360.com/114.114.114.114
 server=/jianavi.com/114.114.114.114
