--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34020,6 +34020,7 @@ server=/gdvolunteer.net/114.114.114.114
 server=/gdwanshun.com/114.114.114.114
 server=/gdwbyq.com/114.114.114.114
 server=/gdwca.com/114.114.114.114
+server=/gdwczb.com/114.114.114.114
 server=/gdwdtz.com/114.114.114.114
 server=/gdwlcloud.com/114.114.114.114
 server=/gdwld.com/114.114.114.114
