--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82206,6 +82206,7 @@ server=/tevachem.com/114.114.114.114
 server=/tex68.com/114.114.114.114
 server=/texnologynano.com/114.114.114.114
 server=/texpage.com/114.114.114.114
+server=/texpro-group.com/114.114.114.114
 server=/textaihua.com/114.114.114.114
 server=/textin.com/114.114.114.114
 server=/teyonds.com/114.114.114.114
