accelerated-domains: add zsxgzn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103793,6 +103793,7 @@ server=/zswmailbox.com/114.114.114.114
 server=/zswph.com/114.114.114.114
 server=/zswtjt.com/114.114.114.114
 server=/zsxfsy.com/114.114.114.114
+server=/zsxgzn.com/114.114.114.114
 server=/zsxinsha.com/114.114.114.114
 server=/zsxq.com/114.114.114.114
 server=/zsxq100.com/114.114.114.114
