accelerated-domains: add huiborobot.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44406,6 +44406,7 @@ server=/huians.com/114.114.114.114
 server=/huibag.com/114.114.114.114
 server=/huibiaoinfo.com/114.114.114.114
 server=/huibo.com/114.114.114.114
+server=/huiborobot.com/114.114.114.114
 server=/huicaishui.net/114.114.114.114
 server=/huiche100.com/114.114.114.114
 server=/huicheimg.com/114.114.114.114
