--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33970,6 +33970,7 @@ server=/gdsa.com/114.114.114.114
 server=/gdscse.net/114.114.114.114
 server=/gdsday.com/114.114.114.114
 server=/gdsdays.com/114.114.114.114
+server=/gdsdkg.com/114.114.114.114
 server=/gdsdwan.com/114.114.114.114
 server=/gdsdyy.com/114.114.114.114
 server=/gdsgd.com/114.114.114.114
