accelerated-domains: add hairuituo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39751,6 +39751,7 @@ server=/hairboxonline.com/114.114.114.114
 server=/hairenren.com/114.114.114.114
 server=/hairongsw.com/114.114.114.114
 server=/hairuichem.com/114.114.114.114
+server=/hairuituo.com/114.114.114.114
 server=/hairunce.com/114.114.114.114
 server=/hairunmedia.com/114.114.114.114
 server=/hairunpictures.com/114.114.114.114
