--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4039,6 +4039,7 @@ server=/3hmlg.com/114.114.114.114
 server=/3i2i.com/114.114.114.114
 server=/3i8uiq2w.work/114.114.114.114
 server=/3incloud.com/114.114.114.114
+server=/3ins.net/114.114.114.114
 server=/3jdh.com/114.114.114.114
 server=/3jhuyu.com/114.114.114.114
 server=/3jidi.com/114.114.114.114
