--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33955,6 +33955,7 @@ server=/gdou.com/114.114.114.114
 server=/gdpdd.com/114.114.114.114
 server=/gdpengquan.com/114.114.114.114
 server=/gdpia.com/114.114.114.114
+server=/gdpingzheng.com/114.114.114.114
 server=/gdprm.com/114.114.114.114
 server=/gdqianyou.com/114.114.114.114
 server=/gdqynews.com/114.114.114.114
