accelerated-domains: add gdsoftpark.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33982,6 +33982,7 @@ server=/gdskfz.com/114.114.114.114
 server=/gdskin.com/114.114.114.114
 server=/gdslrobot.com/114.114.114.114
 server=/gdslwl.com/114.114.114.114
+server=/gdsoftpark.com/114.114.114.114
 server=/gdspeedtest.com/114.114.114.114
 server=/gdsports.net/114.114.114.114
 server=/gdsrcw.com/114.114.114.114
