accelerated-domains: add gdtri.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34011,6 +34011,7 @@ server=/gdtone.com/114.114.114.114
 server=/gdtongda.com/114.114.114.114
 server=/gdtongjiang.com/114.114.114.114
 server=/gdtravel.com/114.114.114.114
+server=/gdtri.com/114.114.114.114
 server=/gdttc.com/114.114.114.114
 server=/gdttdj.com/114.114.114.114
 server=/gdtx56.com/114.114.114.114
