--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34052,6 +34052,7 @@ server=/gdyeb.com/114.114.114.114
 server=/gdygsk.com/114.114.114.114
 server=/gdyilianwang.com/114.114.114.114
 server=/gdyjs.com/114.114.114.114
+server=/gdykhb.net/114.114.114.114
 server=/gdylhp.com/114.114.114.114
 server=/gdyngl.com/114.114.114.114
 server=/gdysnk.com/114.114.114.114
