accelerated-domains: add huaxunholdings.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44273,6 +44273,7 @@ server=/huaxj.net/114.114.114.114
 server=/huaxuezoo.com/114.114.114.114
 server=/huaxumag.com/114.114.114.114
 server=/huaxunbaili.com/114.114.114.114
+server=/huaxunholdings.com/114.114.114.114
 server=/huayang.net/114.114.114.114
 server=/huayanghui.net/114.114.114.114
 server=/huayanwater.com/114.114.114.114
