accelerated-domains: add jiement.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49837,6 +49837,7 @@ server=/jielou.net/114.114.114.114
 server=/jiemaiyang.com/114.114.114.114
 server=/jiemeng.tw/114.114.114.114
 server=/jiemeng8.com/114.114.114.114
+server=/jiement.com/114.114.114.114
 server=/jiemian.com/114.114.114.114
 server=/jiemin.com/114.114.114.114
 server=/jiemo.net/114.114.114.114
