accelerated-domains: add taiquan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81288,6 +81288,7 @@ server=/tainingrencai.com/114.114.114.114
 server=/taiorient.com/114.114.114.114
 server=/taipingyangshuiwu.com/114.114.114.114
 server=/taiqigame.com/114.114.114.114
+server=/taiquan.com/114.114.114.114
 server=/tairock.com/114.114.114.114
 server=/tairui-ad.com/114.114.114.114
 server=/tairuixing.com/114.114.114.114
