--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101319,6 +101319,7 @@ server=/zhengbiaoke.com/114.114.114.114
 server=/zhengcaimall.com/114.114.114.114
 server=/zhengcaishangcheng.com/114.114.114.114
 server=/zhengcehui.com/114.114.114.114
+server=/zhengdaijingji.com/114.114.114.114
 server=/zhengdaojiapei.com/114.114.114.114
 server=/zhengdaotang.com/114.114.114.114
 server=/zhengdapeanut.com/114.114.114.114
