--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29762,6 +29762,7 @@ server=/en8848.com/114.114.114.114
 server=/en998.com/114.114.114.114
 server=/enacdn.biz/114.114.114.114
 server=/enacdn.info/114.114.114.114
+server=/enaiter.com/114.114.114.114
 server=/ename.com/114.114.114.114
 server=/ename.net/114.114.114.114
 server=/enappstore.com/114.114.114.114
