--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34016,6 +34016,7 @@ server=/gdtri.com/114.114.114.114
 server=/gdttc.com/114.114.114.114
 server=/gdttdj.com/114.114.114.114
 server=/gdtx56.com/114.114.114.114
+server=/gdtykj.net/114.114.114.114
 server=/gdtz888.com/114.114.114.114
 server=/gdu-tech.com/114.114.114.114
 server=/gduaee.com/114.114.114.114
