--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34068,6 +34068,7 @@ server=/gdzgy.com/114.114.114.114
 server=/gdzhcx.com/114.114.114.114
 server=/gdzhiding.com/114.114.114.114
 server=/gdzhongshan.com/114.114.114.114
+server=/gdzjdl.com/114.114.114.114
 server=/gdzp.org/114.114.114.114
 server=/gdzrlj.com/114.114.114.114
 server=/gdzs2018.cc/114.114.114.114
