--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40275,6 +40275,7 @@ server=/haomai.net/114.114.114.114
 server=/haomaishe.com/114.114.114.114
 server=/haomaishou.com/114.114.114.114
 server=/haomaku.com/114.114.114.114
+server=/haomei-alu.com/114.114.114.114
 server=/haomenke.com/114.114.114.114
 server=/haomifi.com/114.114.114.114
 server=/haomingguan.com/114.114.114.114
