--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41790,6 +41790,7 @@ server=/hgcmq.com/114.114.114.114
 server=/hgepc.com/114.114.114.114
 server=/hgfdrf.com/114.114.114.114
 server=/hghsd.com/114.114.114.114
+server=/hgicreate.com/114.114.114.114
 server=/hgimage.com/114.114.114.114
 server=/hgitv.com/114.114.114.114
 server=/hgj668.com/114.114.114.114
