--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83621,6 +83621,7 @@ server=/topsmt.com/114.114.114.114
 server=/topsresearch.com/114.114.114.114
 server=/topsrx.com/114.114.114.114
 server=/topstar.art/114.114.114.114
+server=/topstarltd.com/114.114.114.114
 server=/topsunholdings.com/114.114.114.114
 server=/topsunleisure.com/114.114.114.114
 server=/topsunpower.cc/114.114.114.114
