accelerated-domains: add zhishengtec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101699,6 +101699,7 @@ server=/zhishangsoft.com/114.114.114.114
 server=/zhisheji.com/114.114.114.114
 server=/zhisheng.com/114.114.114.114
 server=/zhishengbang.com/114.114.114.114
+server=/zhishengtec.com/114.114.114.114
 server=/zhishengxinchuang-food.com/114.114.114.114
 server=/zhishi.com/114.114.114.114
 server=/zhishi.tech/114.114.114.114
