--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23013,6 +23013,7 @@ server=/consmation.com/114.114.114.114
 server=/console-integration.cdnetworks.com/114.114.114.114
 server=/console.cdnetworks.com/114.114.114.114
 server=/constao.com/114.114.114.114
+server=/constar-gd.com/114.114.114.114
 server=/constgroup.com/114.114.114.114
 server=/consultingcy.com/114.114.114.114
 server=/containerpi.com/114.114.114.114
