--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28661,6 +28661,7 @@ server=/e-elitech.com/114.114.114.114
 server=/e-eway.com/114.114.114.114
 server=/e-fangtong.com/114.114.114.114
 server=/e-flyinc.com/114.114.114.114
+server=/e-fong.com/114.114.114.114
 server=/e-ging.com/114.114.114.114
 server=/e-ging.net/114.114.114.114
 server=/e-gooo.com/114.114.114.114
