--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33906,6 +33906,7 @@ server=/gdinin.com/114.114.114.114
 server=/gdinsight.com/114.114.114.114
 server=/gdiso.com/114.114.114.114
 server=/gdjdxy.com/114.114.114.114
+server=/gdjiabao.com/114.114.114.114
 server=/gdjinge.com/114.114.114.114
 server=/gdjingte.com/114.114.114.114
 server=/gdjiutu.com/114.114.114.114
