--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34062,6 +34062,7 @@ server=/gdylhp.com/114.114.114.114
 server=/gdyngl.com/114.114.114.114
 server=/gdysnk.com/114.114.114.114
 server=/gdytc.com/114.114.114.114
+server=/gdyuasa.com/114.114.114.114
 server=/gdyuhi.com/114.114.114.114
 server=/gdyunxiao.com/114.114.114.114
 server=/gdyunyin.net/114.114.114.114
