--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87593,6 +87593,7 @@ server=/wanke798.com/114.114.114.114
 server=/wanlaiwang.com/114.114.114.114
 server=/wanlan.vip/114.114.114.114
 server=/wanli.com/114.114.114.114
+server=/wanlian-group.com/114.114.114.114
 server=/wanliangfan.asia/114.114.114.114
 server=/wanlicd.com/114.114.114.114
 server=/wanliduo.com/114.114.114.114
