accelerated-domains: add yinyangresin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97039,6 +97039,7 @@ server=/yinxiaobao.net/114.114.114.114
 server=/yinxinbh.com/114.114.114.114
 server=/yinxing.com/114.114.114.114
 server=/yinxunbiao.com/114.114.114.114
+server=/yinyangresin.com/114.114.114.114
 server=/yinyao168.com/114.114.114.114
 server=/yinyouapp.com/114.114.114.114
 server=/yinyue7.com/114.114.114.114
