--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101276,6 +101276,7 @@ server=/zhcidian.com/114.114.114.114
 server=/zhckw.com/114.114.114.114
 server=/zhcommerce.com/114.114.114.114
 server=/zhcomputing.com/114.114.114.114
+server=/zhcsgc.com/114.114.114.114
 server=/zhcw.com/114.114.114.114
 server=/zhcyanshi.com/114.114.114.114
 server=/zhdba.com/114.114.114.114
