--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19810,6 +19810,7 @@ server=/china-touch.com/114.114.114.114
 server=/china-tower.com/114.114.114.114
 server=/china-toy-edu.org/114.114.114.114
 server=/china-toy-expo.com/114.114.114.114
+server=/china-uju.com/114.114.114.114
 server=/china-up.com/114.114.114.114
 server=/china-uva.com/114.114.114.114
 server=/china-vcom.com/114.114.114.114
