accelerated-domains: add leimengjixie.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56066,6 +56066,7 @@ server=/leikeji.com/114.114.114.114
 server=/leilei3dprinter.com/114.114.114.114
 server=/leileiluoluo.com/114.114.114.114
 server=/leilong158.com/114.114.114.114
+server=/leimengjixie.com/114.114.114.114
 server=/leimi.com/114.114.114.114
 server=/leimingtech.com/114.114.114.114
 server=/leimingtelab.com/114.114.114.114
