--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78233,6 +78233,7 @@ server=/snappmaps.ir/114.114.114.114
 server=/snaptube.app/114.114.114.114
 server=/snbkf34.com/114.114.114.114
 server=/sncoda.com/114.114.114.114
+server=/snd-cn.com/114.114.114.114
 server=/snd-yy.com/114.114.114.114
 server=/sndgroup.com/114.114.114.114
 server=/sndhr.com/114.114.114.114
