accelerated-domains: add gd-weisi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33808,6 +33808,7 @@ server=/gd-linux.com/114.114.114.114
 server=/gd-linux.org/114.114.114.114
 server=/gd-ntn.com/114.114.114.114
 server=/gd-tianchen.com/114.114.114.114
+server=/gd-weisi.com/114.114.114.114
 server=/gd-yishuo.com/114.114.114.114
 server=/gd1580.com/114.114.114.114
 server=/gd165.com/114.114.114.114
