accelerated-domains: add gdzzjc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34091,6 +34091,7 @@ server=/gdzy5413.com/114.114.114.114
 server=/gdzygroup.com/114.114.114.114
 server=/gdzygy.com/114.114.114.114
 server=/gdzz114.com/114.114.114.114
+server=/gdzzjc.com/114.114.114.114
 server=/gdzzz.com/114.114.114.114
 server=/ge-garden.net/114.114.114.114
 server=/ge-stralen.com/114.114.114.114
