accelerated-domains: add heyingedu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41640,6 +41640,7 @@ server=/heyeca.com/114.114.114.114
 server=/heyi.com/114.114.114.114
 server=/heyiguoyuan.com/114.114.114.114
 server=/heyingcn.com/114.114.114.114
+server=/heyingedu.com/114.114.114.114
 server=/heyinguanli.com/114.114.114.114
 server=/heyinshiliu.com/114.114.114.114
 server=/heyix.com/114.114.114.114
