accelerated-domains: add si-bao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77196,6 +77196,7 @@ server=/shzymp.com/114.114.114.114
 server=/shzytzj.com/114.114.114.114
 server=/shzyw.com/114.114.114.114
 server=/shzzks.com/114.114.114.114
+server=/si-bao.com/114.114.114.114
 server=/si-en.com/114.114.114.114
 server=/si-era.com/114.114.114.114
 server=/si-in.com/114.114.114.114
