accelerated-domains: add dymatic.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28492,6 +28492,7 @@ server=/dykz66.com/114.114.114.114
 server=/dylc.com/114.114.114.114
 server=/dyly.com/114.114.114.114
 server=/dylyghm.com/114.114.114.114
+server=/dymatic.com/114.114.114.114
 server=/dymexhealthcare.com/114.114.114.114
 server=/dymusictape.com/114.114.114.114
 server=/dymusicvideo.com/114.114.114.114
