--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31564,6 +31564,7 @@ server=/fengligroup.com/114.114.114.114
 server=/fenglil.com/114.114.114.114
 server=/fenglingroup.com/114.114.114.114
 server=/fenglinjiu.com/114.114.114.114
+server=/fenglu-alu.com/114.114.114.114
 server=/fengmaniu.com/114.114.114.114
 server=/fengmaniutouch.com/114.114.114.114
 server=/fengmeng.net/114.114.114.114
