accelerated-domains: add utrustamc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85862,6 +85862,7 @@ server=/utourworld.com/114.114.114.114
 server=/utovr.com/114.114.114.114
 server=/utrainee.com/114.114.114.114
 server=/utransm.com/114.114.114.114
+server=/utrustamc.com/114.114.114.114
 server=/utsource.net/114.114.114.114
 server=/uttjhu.xyz/114.114.114.114
 server=/utvhk.com/114.114.114.114
