--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30416,6 +30416,7 @@ server=/ewtp.com/114.114.114.114
 server=/ewtp.org/114.114.114.114
 server=/ex-silver.com/114.114.114.114
 server=/ex-starch.com/114.114.114.114
+server=/ex360.com/114.114.114.114
 server=/exam58.com/114.114.114.114
 server=/exam76.com/114.114.114.114
 server=/exam8.com/114.114.114.114
