--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34808,6 +34808,7 @@ server=/gkcyc.com/114.114.114.114
 server=/gkczgs.com/114.114.114.114
 server=/gkczp.com/114.114.114.114
 server=/gkfb.com/114.114.114.114
+server=/gkgdsw.com/114.114.114.114
 server=/gkgzj.com/114.114.114.114
 server=/gkhxtc.com/114.114.114.114
 server=/gki88.com/114.114.114.114
