--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36020,6 +36020,7 @@ server=/gt520.com/114.114.114.114
 server=/gtac.cc/114.114.114.114
 server=/gtadata.com/114.114.114.114
 server=/gtags.net/114.114.114.114
+server=/gtajl.com/114.114.114.114
 server=/gtan.com/114.114.114.114
 server=/gtanhao.com/114.114.114.114
 server=/gtarsc.com/114.114.114.114
