--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87432,6 +87432,7 @@ server=/wangchenglin.icu/114.114.114.114
 server=/wangchujiang.com/114.114.114.114
 server=/wangchunsheng.com/114.114.114.114
 server=/wangcms.com/114.114.114.114
+server=/wangdafeed.com/114.114.114.114
 server=/wangdahn.com/114.114.114.114
 server=/wangdai114.com/114.114.114.114
 server=/wangdaibus.com/114.114.114.114
