--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21907,6 +21907,7 @@ server=/cn-mingda.com/114.114.114.114
 server=/cn-msedge.net/114.114.114.114
 server=/cn-mw.com/114.114.114.114
 server=/cn-natural.com/114.114.114.114
+server=/cn-only.com/114.114.114.114
 server=/cn-psy.com/114.114.114.114
 server=/cn-railway.net/114.114.114.114
 server=/cn-rcqc.com/114.114.114.114
