accelerated-domains: add fst-pipe.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32711,6 +32711,7 @@ server=/fssdbjyy.com/114.114.114.114
 server=/fsshenneng.com/114.114.114.114
 server=/fsspc.com/114.114.114.114
 server=/fssptjj.com/114.114.114.114
+server=/fst-pipe.net/114.114.114.114
 server=/fstaoci.com/114.114.114.114
 server=/fstcb.com/114.114.114.114
 server=/fstgs.com/114.114.114.114
