accelerated-domains: add gd-dl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33804,6 +33804,7 @@ server=/gcyts.com/114.114.114.114
 server=/gcyy08.com/114.114.114.114
 server=/gczyg.com/114.114.114.114
 server=/gd-chenxing.com/114.114.114.114
+server=/gd-dl.com/114.114.114.114
 server=/gd-hskj.com/114.114.114.114
 server=/gd-hstech.com/114.114.114.114
 server=/gd-id.com/114.114.114.114
