--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33972,6 +33972,7 @@ server=/gdpia.com/114.114.114.114
 server=/gdpingzheng.com/114.114.114.114
 server=/gdprm.com/114.114.114.114
 server=/gdqianyou.com/114.114.114.114
+server=/gdqxjt.com/114.114.114.114
 server=/gdqynews.com/114.114.114.114
 server=/gdrc.com/114.114.114.114
 server=/gdrc360.com/114.114.114.114
