--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36188,6 +36188,7 @@ server=/guangdianyun.tv/114.114.114.114
 server=/guangdiu.com/114.114.114.114
 server=/guangdong1039.com/114.114.114.114
 server=/guangdonggames.com/114.114.114.114
+server=/guangdonglianxing.com/114.114.114.114
 server=/guangdonglong.com/114.114.114.114
 server=/guangdongrc.com/114.114.114.114
 server=/guangdongtaiji.com/114.114.114.114
