--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74505,6 +74505,7 @@ server=/sdi23.com/114.114.114.114
 server=/sdiandian.com/114.114.114.114
 server=/sdiborn.com/114.114.114.114
 server=/sdiccapital.com/114.114.114.114
+server=/sdicgdny.com/114.114.114.114
 server=/sdicgxxny.com/114.114.114.114
 server=/sdicin.com/114.114.114.114
 server=/sdicpower.com/114.114.114.114
