--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79411,6 +79411,7 @@ server=/strongfc.com/114.114.114.114
 server=/strongled.com/114.114.114.114
 server=/struhuts.com/114.114.114.114
 server=/stshuizhi.com/114.114.114.114
+server=/stssugar.com/114.114.114.114
 server=/stswjx.com/114.114.114.114
 server=/stszcm.com/114.114.114.114
 server=/stt-bearing.com/114.114.114.114
