--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12015,6 +12015,7 @@ server=/asbic11.com/114.114.114.114
 server=/asc-wines.com/114.114.114.114
 server=/ascend-bio.com/114.114.114.114
 server=/ascendgz.com/114.114.114.114
+server=/ascenpower.com/114.114.114.114
 server=/aschina.org/114.114.114.114
 server=/aschip.com/114.114.114.114
 server=/aschtj.com/114.114.114.114
