accelerated-domains: add gddingxin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33870,6 +33870,7 @@ server=/gddg.cc/114.114.114.114
 server=/gddhn.com/114.114.114.114
 server=/gddidg.com/114.114.114.114
 server=/gddikasi.com/114.114.114.114
+server=/gddingxin.com/114.114.114.114
 server=/gddmsmc.com/114.114.114.114
 server=/gddqfs.com/114.114.114.114
 server=/gddqfs.net/114.114.114.114
