--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33983,6 +33983,7 @@ server=/gdrcu.com/114.114.114.114
 server=/gdrfyy.com/114.114.114.114
 server=/gdroro.com/114.114.114.114
 server=/gdrqj.org/114.114.114.114
+server=/gdruien.com/114.114.114.114
 server=/gds-huanbaogroup.com/114.114.114.114
 server=/gds-services.com/114.114.114.114
 server=/gdsa.com/114.114.114.114
