--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34069,6 +34069,7 @@ server=/gdydgj.com/114.114.114.114
 server=/gdydzb.com/114.114.114.114
 server=/gdyeb.com/114.114.114.114
 server=/gdygsk.com/114.114.114.114
+server=/gdyhsp.com/114.114.114.114
 server=/gdyilianwang.com/114.114.114.114
 server=/gdyjs.com/114.114.114.114
 server=/gdykhb.net/114.114.114.114
