--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36034,6 +36034,7 @@ server=/gtanhao.com/114.114.114.114
 server=/gtarsc.com/114.114.114.114
 server=/gtaxqh.com/114.114.114.114
 server=/gtbrowser.com/114.114.114.114
+server=/gtc-power.com/114.114.114.114
 server=/gtcedu.com/114.114.114.114
 server=/gtcim.com/114.114.114.114
 server=/gtder.club/114.114.114.114
