--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36229,6 +36229,7 @@ server=/guangsai.cc/114.114.114.114
 server=/guangshantang.vip/114.114.114.114
 server=/guangsuan.com/114.114.114.114
 server=/guangsuss.com/114.114.114.114
+server=/guangte-ne.com/114.114.114.114
 server=/guangtuikeji.com/114.114.114.114
 server=/guanguigroup.com/114.114.114.114
 server=/guanguser.com/114.114.114.114
