accelerated-domains: add herdar.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41567,6 +41567,7 @@ server=/hercity.com/114.114.114.114
 server=/hercules-logistics.com/114.114.114.114
 server=/hercules-micro.com/114.114.114.114
 server=/herdacdn.com/114.114.114.114
+server=/herdar.com/114.114.114.114
 server=/herdcloud.com/114.114.114.114
 server=/herdsric.com/114.114.114.114
 server=/here120.com/114.114.114.114
