accelerated-domains: add itc.vip

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48130,6 +48130,7 @@ server=/itbug.shop/114.114.114.114
 server=/itbulu.com/114.114.114.114
 server=/itbuy.com/114.114.114.114
 server=/itbyte.net/114.114.114.114
+server=/itc.vip/114.114.114.114
 server=/itcdlf.com/114.114.114.114
 server=/itchaguan.com/114.114.114.114
 server=/itcm.com/114.114.114.114
