--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58296,6 +58296,7 @@ server=/lrs001.com/114.114.114.114
 server=/lrscloud2.com/114.114.114.114
 server=/lrscloud3.com/114.114.114.114
 server=/lrswl.com/114.114.114.114
+server=/lrt-tech.com/114.114.114.114
 server=/lrts.me/114.114.114.114
 server=/lrvin.com/114.114.114.114
 server=/lrwxjji.com/114.114.114.114
