--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63230,6 +63230,7 @@ server=/mzhu8.com/114.114.114.114
 server=/mzhujia.com/114.114.114.114
 server=/mzihen.com/114.114.114.114
 server=/mzjiacheng.com/114.114.114.114
+server=/mzjinyan.com/114.114.114.114
 server=/mzjzs.com/114.114.114.114
 server=/mzklg.com/114.114.114.114
 server=/mzlwxw.com/114.114.114.114
