--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79940,6 +79940,7 @@ server=/suqianhospital.com/114.114.114.114
 server=/suqing.com/114.114.114.114
 server=/suqishi.com/114.114.114.114
 server=/suqnn.com/114.114.114.114
+server=/suqun-group.com/114.114.114.114
 server=/surely.cool/114.114.114.114
 server=/suremotoo.site/114.114.114.114
 server=/surerp.com/114.114.114.114
