--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80138,6 +80138,7 @@ server=/swyun.net/114.114.114.114
 server=/swzx.com/114.114.114.114
 server=/sx-merryland.com/114.114.114.114
 server=/sx-moen.com/114.114.114.114
+server=/sx-seafood.com/114.114.114.114
 server=/sx1211.com/114.114.114.114
 server=/sx189.com/114.114.114.114
 server=/sx267.com/114.114.114.114
