--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83340,6 +83340,7 @@ server=/tngcjx.com/114.114.114.114
 server=/tnjly.com/114.114.114.114
 server=/tnkjmec.com/114.114.114.114
 server=/tnodenow.com/114.114.114.114
+server=/tnong.com/114.114.114.114
 server=/tnsou.com/114.114.114.114
 server=/tnzuwu.com/114.114.114.114
 server=/to-future.net/114.114.114.114
