--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95734,6 +95734,7 @@ server=/yantailuoshuan.com/114.114.114.114
 server=/yantaimarket.com/114.114.114.114
 server=/yantaiport.com/114.114.114.114
 server=/yantaitech.com/114.114.114.114
+server=/yantangmilk.com/114.114.114.114
 server=/yantao.wiki/114.114.114.114
 server=/yantaqu.com/114.114.114.114
 server=/yantu360.net/114.114.114.114
