accelerated-domains: add cncdh2.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22043,6 +22043,7 @@ server=/cncc.bingj.com/114.114.114.114
 server=/cnccac.com/114.114.114.114
 server=/cnccchina.com/114.114.114.114
 server=/cnccdn.com/114.114.114.114
+server=/cncdh2.com/114.114.114.114
 server=/cncdn.com/114.114.114.114
 server=/cncdnx.com/114.114.114.114
 server=/cncecci.com/114.114.114.114
