accelerated-domains: add ecanmed.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29009,6 +29009,7 @@ server=/ecadi.com/114.114.114.114
 server=/ecaidian.com/114.114.114.114
 server=/ecaihr.com/114.114.114.114
 server=/ecamzone.cc/114.114.114.114
+server=/ecanmed.com/114.114.114.114
 server=/ecapp.org/114.114.114.114
 server=/ecaptechnology.com/114.114.114.114
 server=/ecaray.com/114.114.114.114
