--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33933,6 +33933,7 @@ server=/gdjuhan.com/114.114.114.114
 server=/gdjuntai.com/114.114.114.114
 server=/gdjyw.com/114.114.114.114
 server=/gdjzcw.com/114.114.114.114
+server=/gdk-link.com/114.114.114.114
 server=/gdkailin.com/114.114.114.114
 server=/gdkepler.com/114.114.114.114
 server=/gdkjb.com/114.114.114.114
