--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34010,6 +34010,7 @@ server=/gdsrcw.com/114.114.114.114
 server=/gdsstl.com/114.114.114.114
 server=/gdstc.group/114.114.114.114
 server=/gdstlab.com/114.114.114.114
+server=/gdsugar.com/114.114.114.114
 server=/gdsuxie.com/114.114.114.114
 server=/gdswgc.com/114.114.114.114
 server=/gdswine.com/114.114.114.114
