accelerated-domains: add weihuagroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88262,6 +88262,7 @@ server=/weihaoyi.com/114.114.114.114
 server=/weiheshidai.com/114.114.114.114
 server=/weihua-newmaterial.com/114.114.114.114
 server=/weihua2.com/114.114.114.114
+server=/weihuagroup.com/114.114.114.114
 server=/weihualing.com/114.114.114.114
 server=/weihubao.com/114.114.114.114
 server=/weihuijob.com/114.114.114.114
