--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27317,6 +27317,7 @@ server=/dongaigc.com/114.114.114.114
 server=/dongannews.com/114.114.114.114
 server=/dongao.com/114.114.114.114
 server=/dongaocloud.com/114.114.114.114
+server=/dongbao-cn.com/114.114.114.114
 server=/dongbao120.com/114.114.114.114
 server=/dongbd.com/114.114.114.114
 server=/dongbeishifandaxue.com/114.114.114.114
