accelerated-domains: add gdkingma.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33938,6 +33938,7 @@ server=/gdjzcw.com/114.114.114.114
 server=/gdk-link.com/114.114.114.114
 server=/gdkailin.com/114.114.114.114
 server=/gdkepler.com/114.114.114.114
+server=/gdkingma.com/114.114.114.114
 server=/gdkjb.com/114.114.114.114
 server=/gdkjw.com/114.114.114.114
 server=/gdks168.com/114.114.114.114
