--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34084,6 +34084,7 @@ server=/gdylhp.com/114.114.114.114
 server=/gdyngl.com/114.114.114.114
 server=/gdysnk.com/114.114.114.114
 server=/gdytc.com/114.114.114.114
+server=/gdyuanshun.com/114.114.114.114
 server=/gdyuasa.com/114.114.114.114
 server=/gdyuhi.com/114.114.114.114
 server=/gdyunxiao.com/114.114.114.114
