--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35510,6 +35510,7 @@ server=/gooagoo.com/114.114.114.114
 server=/gooann.com/114.114.114.114
 server=/goobye.net/114.114.114.114
 server=/good-display.com/114.114.114.114
+server=/good-expo.com/114.114.114.114
 server=/good-game-network.com/114.114.114.114
 server=/good-import.com/114.114.114.114
 server=/good.cc/114.114.114.114
