--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43894,6 +43894,7 @@ server=/huacaobk.com/114.114.114.114
 server=/huacaole.com/114.114.114.114
 server=/huacaoshumu.net/114.114.114.114
 server=/huacemedia.com/114.114.114.114
+server=/huachang-alu.com/114.114.114.114
 server=/huachengenjoy.com/114.114.114.114
 server=/huachengjx.com/114.114.114.114
 server=/huachenit.com/114.114.114.114
