--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66532,6 +66532,7 @@ server=/onlinedown.net/114.114.114.114
 server=/onlinekr.com/114.114.114.114
 server=/onlinenic.net/114.114.114.114
 server=/onlinexijiang.com/114.114.114.114
+server=/onlly.com/114.114.114.114
 server=/only-memory.com/114.114.114.114
 server=/only-moment.com/114.114.114.114
 server=/only4.work/114.114.114.114
