--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72354,6 +72354,7 @@ server=/rehuolm.com/114.114.114.114
 server=/rehuwang.com/114.114.114.114
 server=/reilybrand.com/114.114.114.114
 server=/reinness.com/114.114.114.114
+server=/rejesafe.com/114.114.114.114
 server=/rejushe.com/114.114.114.114
 server=/rekelead.com/114.114.114.114
 server=/rekonquer.com/114.114.114.114
