accelerated-domains: add sanhepile.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73778,6 +73778,7 @@ server=/sanhaoradio.com/114.114.114.114
 server=/sanhaostreet.com/114.114.114.114
 server=/sanhe-medical.com/114.114.114.114
 server=/sanhe-scale.com/114.114.114.114
+server=/sanhepile.com/114.114.114.114
 server=/sanhetimburly.com/114.114.114.114
 server=/sanheyongjia.com/114.114.114.114
 server=/sanhome.com/114.114.114.114
