accelerated-domains: add vodehr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86832,6 +86832,7 @@ server=/vocinno.com/114.114.114.114
 server=/vod-pro.com/114.114.114.114
 server=/vod-qcloud.com/114.114.114.114
 server=/voddlb.com/114.114.114.114
+server=/vodehr.com/114.114.114.114
 server=/vodeshop.com/114.114.114.114
 server=/vodjk.com/114.114.114.114
 server=/vodn-valve.com/114.114.114.114
