--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90031,6 +90031,7 @@ server=/woniupai.net/114.114.114.114
 server=/woniutrip.com/114.114.114.114
 server=/wonmay.com/114.114.114.114
 server=/wonmay.net/114.114.114.114
+server=/wononme.com/114.114.114.114
 server=/wonote.com/114.114.114.114
 server=/wonpearl.com/114.114.114.114
 server=/wonplug.net/114.114.114.114
