--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18782,6 +18782,7 @@ server=/ceshigu.com/114.114.114.114
 server=/ceshiren.com/114.114.114.114
 server=/cesinet.com/114.114.114.114
 server=/cesipc.com/114.114.114.114
+server=/cesko-dl.com/114.114.114.114
 server=/cespc.com/114.114.114.114
 server=/cesu.net/114.114.114.114
 server=/cetc33.com/114.114.114.114
