accelerated-domains: add fescoguangdong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31676,6 +31676,7 @@ server=/fersese.com/114.114.114.114
 server=/fescoadecco.com/114.114.114.114
 server=/fescoadeccozhejiang.com/114.114.114.114
 server=/fescogroup.com/114.114.114.114
+server=/fescoguangdong.com/114.114.114.114
 server=/feso.tech/114.114.114.114
 server=/festaint.com/114.114.114.114
 server=/fetiononline.com/114.114.114.114
