--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32885,6 +32885,7 @@ server=/fulitec.com/114.114.114.114
 server=/fuliti.com/114.114.114.114
 server=/fuliw.net/114.114.114.114
 server=/full-way.com/114.114.114.114
+server=/fullde.com/114.114.114.114
 server=/fullhan.com/114.114.114.114
 server=/fullics.com/114.114.114.114
 server=/fulllinks.com/114.114.114.114
