accelerated-domains: add ght-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34645,6 +34645,7 @@ server=/ghsmc.com/114.114.114.114
 server=/ghsmgs.com/114.114.114.114
 server=/ghsmpwalmart.com/114.114.114.114
 server=/ghsuliao.com/114.114.114.114
+server=/ght-china.com/114.114.114.114
 server=/ght.me/114.114.114.114
 server=/ght120.com/114.114.114.114
 server=/ghtech.com/114.114.114.114
