--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36194,6 +36194,7 @@ server=/guandang.net/114.114.114.114
 server=/guandata.com/114.114.114.114
 server=/guandianle.com/114.114.114.114
 server=/guandongyucang.com/114.114.114.114
+server=/guang-yuan.com/114.114.114.114
 server=/guang.com/114.114.114.114
 server=/guangbali.com/114.114.114.114
 server=/guangbao-uni.com/114.114.114.114
