--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65652,6 +65652,7 @@ server=/npuxs.com/114.114.114.114
 server=/npxsw.com/114.114.114.114
 server=/npz.com/114.114.114.114
 server=/nq6.com/114.114.114.114
+server=/nqctek.com/114.114.114.114
 server=/nqez.com/114.114.114.114
 server=/nqlai.com/114.114.114.114
 server=/nqmoui.com/114.114.114.114
