--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33814,6 +33814,7 @@ server=/gd-chenxing.com/114.114.114.114
 server=/gd-dl.com/114.114.114.114
 server=/gd-hskj.com/114.114.114.114
 server=/gd-hstech.com/114.114.114.114
+server=/gd-huadi.com/114.114.114.114
 server=/gd-id.com/114.114.114.114
 server=/gd-jinzhanggui.com/114.114.114.114
 server=/gd-lekai.com/114.114.114.114
