--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33915,6 +33915,7 @@ server=/gdhcsh.com/114.114.114.114
 server=/gdhdbxg.com/114.114.114.114
 server=/gdhfny.com/114.114.114.114
 server=/gdhjzs.com/114.114.114.114
+server=/gdhsbid.com/114.114.114.114
 server=/gdhtcm.com/114.114.114.114
 server=/gdhuana.com/114.114.114.114
 server=/gdhwater.com/114.114.114.114
