accelerated-domains: add bigddg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14694,6 +14694,7 @@ server=/bigdata-expo.org/114.114.114.114
 server=/bigdata.ren/114.114.114.114
 server=/bigdatasafe.org/114.114.114.114
 server=/bigdatastudy.net/114.114.114.114
+server=/bigddg.com/114.114.114.114
 server=/bige0.com/114.114.114.114
 server=/bigecko.com/114.114.114.114
 server=/bigehudong.com/114.114.114.114
