--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32652,6 +32652,7 @@ server=/fsbankonline.com/114.114.114.114
 server=/fsbqgd.com/114.114.114.114
 server=/fsccjy.com/114.114.114.114
 server=/fsccyy.com/114.114.114.114
+server=/fschico.com/114.114.114.114
 server=/fscinda.com/114.114.114.114
 server=/fscjfm.com/114.114.114.114
 server=/fscjkj.net/114.114.114.114
