--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33894,6 +33894,7 @@ server=/gdefair.com/114.114.114.114
 server=/gdems.com/114.114.114.114
 server=/gdevops.com/114.114.114.114
 server=/gdfc0563.com/114.114.114.114
+server=/gdfeiyang.com/114.114.114.114
 server=/gdfenxiao.com/114.114.114.114
 server=/gdfgq.club/114.114.114.114
 server=/gdfplaza.com/114.114.114.114
