accelerated-domains: add hrb-dg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43544,6 +43544,7 @@ server=/hr78.net/114.114.114.114
 server=/hr9000.com/114.114.114.114
 server=/hr987.com/114.114.114.114
 server=/hrayw.com/114.114.114.114
+server=/hrb-dg.com/114.114.114.114
 server=/hrbaodian.com/114.114.114.114
 server=/hrbar.com/114.114.114.114
 server=/hrbbcf.com/114.114.114.114
