--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10251,6 +10251,7 @@ server=/airimoe.com/114.114.114.114
 server=/airj.website/114.114.114.114
 server=/airjd.com/114.114.114.114
 server=/airkunming.com/114.114.114.114
+server=/airleaderchina.com/114.114.114.114
 server=/airmart.vip/114.114.114.114
 server=/airmate-china.com/114.114.114.114
 server=/airmb.com/114.114.114.114
