accelerated-domains: add cn-vending.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21922,6 +21922,7 @@ server=/cn-sdf.com/114.114.114.114
 server=/cn-soft.com/114.114.114.114
 server=/cn-truck.com/114.114.114.114
 server=/cn-unitech.com/114.114.114.114
+server=/cn-vending.com/114.114.114.114
 server=/cn-visa.com/114.114.114.114
 server=/cn-weida.com/114.114.114.114
 server=/cn-witmed.com/114.114.114.114
