accelerated-domains: add gdww.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34069,6 +34069,7 @@ server=/gdwld.com/114.114.114.114
 server=/gdwlife.com/114.114.114.114
 server=/gdwsa.com/114.114.114.114
 server=/gdwse.com/114.114.114.114
+server=/gdww.com/114.114.114.114
 server=/gdwxyf.com/114.114.114.114
 server=/gdwz.com/114.114.114.114
 server=/gdxdy.com/114.114.114.114
