accelerated-domains: add uk-st.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85395,6 +85395,7 @@ server=/ujnfdfv.com/114.114.114.114
 server=/uju365.com/114.114.114.114
 server=/ujxs.com/114.114.114.114
 server=/uk-edu.com/114.114.114.114
+server=/uk-st.com/114.114.114.114
 server=/uk86.com/114.114.114.114
 server=/ukanshu.com/114.114.114.114
 server=/ukeban.com/114.114.114.114
