accelerated-domains: add zhxcn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102499,6 +102499,7 @@ server=/zhwyy.com/114.114.114.114
 server=/zhx-mall.com/114.114.114.114
 server=/zhx2008.com/114.114.114.114
 server=/zhxbjsjt.com/114.114.114.114
+server=/zhxcn.com/114.114.114.114
 server=/zhxdfpr.com/114.114.114.114
 server=/zhxfei.com/114.114.114.114
 server=/zhxg.com/114.114.114.114
