accelerated-domains: add gd-shenhua.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33825,6 +33825,7 @@ server=/gd-lekai.com/114.114.114.114
 server=/gd-linux.com/114.114.114.114
 server=/gd-linux.org/114.114.114.114
 server=/gd-ntn.com/114.114.114.114
+server=/gd-shenhua.com/114.114.114.114
 server=/gd-tianchen.com/114.114.114.114
 server=/gd-weisi.com/114.114.114.114
 server=/gd-yishuo.com/114.114.114.114
