accelerated-domains: add tl-finechem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83241,6 +83241,7 @@ server=/tkxxd.net/114.114.114.114
 server=/tkxyy.com/114.114.114.114
 server=/tky001.com/114.114.114.114
 server=/tkyks.xyz/114.114.114.114
+server=/tl-finechem.com/114.114.114.114
 server=/tl-self.com/114.114.114.114
 server=/tl-shida.com/114.114.114.114
 server=/tl-tek.com/114.114.114.114
