accelerated-domains: add gdhwjl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33926,6 +33926,7 @@ server=/gdhsbid.com/114.114.114.114
 server=/gdhtcm.com/114.114.114.114
 server=/gdhuana.com/114.114.114.114
 server=/gdhwater.com/114.114.114.114
+server=/gdhwjl.com/114.114.114.114
 server=/gdicoou.com/114.114.114.114
 server=/gdie.com/114.114.114.114
 server=/gdinfo.net/114.114.114.114
