accelerated-domains: add gdj-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33933,6 +33933,7 @@ server=/gdinfo.net/114.114.114.114
 server=/gdinin.com/114.114.114.114
 server=/gdinsight.com/114.114.114.114
 server=/gdiso.com/114.114.114.114
+server=/gdj-tech.com/114.114.114.114
 server=/gdjdxy.com/114.114.114.114
 server=/gdjiabao.com/114.114.114.114
 server=/gdjinge.com/114.114.114.114
