--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33977,6 +33977,7 @@ server=/gdmusah.com/114.114.114.114
 server=/gdmuseum.com/114.114.114.114
 server=/gdmztv.com/114.114.114.114
 server=/gdmzw.com/114.114.114.114
+server=/gdnd2016.com/114.114.114.114
 server=/gdnengyuan.com/114.114.114.114
 server=/gdnewmedia.cc/114.114.114.114
 server=/gdnfzb.com/114.114.114.114
