--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34108,6 +34108,7 @@ server=/gdyunxiao.com/114.114.114.114
 server=/gdyunyin.net/114.114.114.114
 server=/gdyxc.com/114.114.114.114
 server=/gdz.co/114.114.114.114
+server=/gdzgjl.com/114.114.114.114
 server=/gdzgy.com/114.114.114.114
 server=/gdzhcx.com/114.114.114.114
 server=/gdzhiding.com/114.114.114.114
