--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39307,6 +39307,7 @@ server=/gznw.com/114.114.114.114
 server=/gznxbank.com/114.114.114.114
 server=/gznypfk.com/114.114.114.114
 server=/gzocl.com/114.114.114.114
+server=/gzoyrr.com/114.114.114.114
 server=/gzpeite.com/114.114.114.114
 server=/gzpeiyou.com/114.114.114.114
 server=/gzpfs.com/114.114.114.114
