--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50352,6 +50352,7 @@ server=/jinluzl.com/114.114.114.114
 server=/jinlvkeji.com/114.114.114.114
 server=/jinlyb.com/114.114.114.114
 server=/jinma-int.com/114.114.114.114
+server=/jinmabrand.com/114.114.114.114
 server=/jinmacy.com/114.114.114.114
 server=/jinmajia.com/114.114.114.114
 server=/jinmalvyou.com/114.114.114.114
