--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57539,6 +57539,7 @@ server=/livevideostack.com/114.114.114.114
 server=/livotre.com/114.114.114.114
 server=/liwai.com/114.114.114.114
 server=/liwanggui.com/114.114.114.114
+server=/liwanght.com/114.114.114.114
 server=/liweiauto.com/114.114.114.114
 server=/liweicar.com/114.114.114.114
 server=/liweijia.com/114.114.114.114
