--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33909,6 +33909,7 @@ server=/gdgassoc.com/114.114.114.114
 server=/gdggkf.com/114.114.114.114
 server=/gdghg.com/114.114.114.114
 server=/gdgkty.com/114.114.114.114
+server=/gdgpc.net/114.114.114.114
 server=/gdgrsw.com/114.114.114.114
 server=/gdguangdong.com/114.114.114.114
 server=/gdgudong.com/114.114.114.114
