--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34010,6 +34010,7 @@ server=/gdruien.com/114.114.114.114
 server=/gds-huanbaogroup.com/114.114.114.114
 server=/gds-services.com/114.114.114.114
 server=/gdsa.com/114.114.114.114
+server=/gdsalt.com/114.114.114.114
 server=/gdscse.net/114.114.114.114
 server=/gdsday.com/114.114.114.114
 server=/gdsdays.com/114.114.114.114
