accelerated-domains: add stzc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79520,6 +79520,7 @@ server=/styles-sys.com/114.114.114.114
 server=/stymqd.xyz/114.114.114.114
 server=/styst.net/114.114.114.114
 server=/styuanhua.com/114.114.114.114
+server=/stzc.com/114.114.114.114
 server=/stzzx.com/114.114.114.114
 server=/su-jiao.com/114.114.114.114
 server=/su-long.com/114.114.114.114
