accelerated-domains: add chinalongshu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20229,6 +20229,7 @@ server=/chinalive.com/114.114.114.114
 server=/chinaliyou.com/114.114.114.114
 server=/chinalm.org/114.114.114.114
 server=/chinalonghu.com/114.114.114.114
+server=/chinalongshu.com/114.114.114.114
 server=/chinalowcarb.com/114.114.114.114
 server=/chinalpharm.com/114.114.114.114
 server=/chinalsjt.com/114.114.114.114
