accelerated-domains: add gdhhgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33924,6 +33924,7 @@ server=/gdhchina.com/114.114.114.114
 server=/gdhcsh.com/114.114.114.114
 server=/gdhdbxg.com/114.114.114.114
 server=/gdhfny.com/114.114.114.114
+server=/gdhhgroup.com/114.114.114.114
 server=/gdhjzs.com/114.114.114.114
 server=/gdhsbid.com/114.114.114.114
 server=/gdhtcm.com/114.114.114.114
