accelerated-domains: add gdatc.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33849,6 +33849,7 @@ server=/gdairport.com/114.114.114.114
 server=/gdajk.com/114.114.114.114
 server=/gdapi.net/114.114.114.114
 server=/gdatacube.net/114.114.114.114
+server=/gdatc.net/114.114.114.114
 server=/gdbbk.com/114.114.114.114
 server=/gdbenke.com/114.114.114.114
 server=/gdbhnk.com/114.114.114.114
