accelerated-domains: add gdtongyi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34057,6 +34057,7 @@ server=/gdtimg.com/114.114.114.114
 server=/gdtone.com/114.114.114.114
 server=/gdtongda.com/114.114.114.114
 server=/gdtongjiang.com/114.114.114.114
+server=/gdtongyi.com/114.114.114.114
 server=/gdtravel.com/114.114.114.114
 server=/gdtri.com/114.114.114.114
 server=/gdttc.com/114.114.114.114
