accelerated-domains: add hwjm-mold.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45080,6 +45080,7 @@ server=/hwfcw.com/114.114.114.114
 server=/hwgis.com/114.114.114.114
 server=/hwhidc.com/114.114.114.114
 server=/hwht.com/114.114.114.114
+server=/hwjm-mold.com/114.114.114.114
 server=/hwjyw.com/114.114.114.114
 server=/hwlifting.com/114.114.114.114
 server=/hwlpz.com/114.114.114.114
