accelerated-domains: add hongyugroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43199,6 +43199,7 @@ server=/hongyuanpharm.com/114.114.114.114
 server=/hongyuanqh.com/114.114.114.114
 server=/hongyue.com/114.114.114.114
 server=/hongyuejiu.com/114.114.114.114
+server=/hongyugroup.com/114.114.114.114
 server=/hongyugz.com/114.114.114.114
 server=/hongyumedical.com/114.114.114.114
 server=/hongyunduo.com/114.114.114.114
