accelerated-domains: add jushen.co

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52343,6 +52343,7 @@ server=/jurongrencai.com/114.114.114.114
 server=/juseey.com/114.114.114.114
 server=/jusen2008.com/114.114.114.114
 server=/jusha.com/114.114.114.114
+server=/jushen.co/114.114.114.114
 server=/jushequan.com/114.114.114.114
 server=/jushewang.com/114.114.114.114
 server=/jushigj.com/114.114.114.114
