accelerated-domains: add kensuntec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53622,6 +53622,7 @@ server=/kenjieer.com/114.114.114.114
 server=/kenkapacking.com/114.114.114.114
 server=/kenshu.cc/114.114.114.114
 server=/kenshuhu.com/114.114.114.114
+server=/kensuntec.com/114.114.114.114
 server=/kentier.com/114.114.114.114
 server=/kentxxq.com/114.114.114.114
 server=/kenuonet.com/114.114.114.114
