accelerated-domains: add dopo-online.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27485,6 +27485,7 @@ server=/doowinfintec.com/114.114.114.114
 server=/dooya.com/114.114.114.114
 server=/dopa.com/114.114.114.114
 server=/dopic.net/114.114.114.114
+server=/dopo-online.net/114.114.114.114
 server=/dopoil.com/114.114.114.114
 server=/dopool.com/114.114.114.114
 server=/dopsie.fun/114.114.114.114
