accelerated-domains: add jingyimetal.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50289,6 +50289,7 @@ server=/jingyanlib.com/114.114.114.114
 server=/jingyeco.com/114.114.114.114
 server=/jingyeqian.com/114.114.114.114
 server=/jingyi186.com/114.114.114.114
+server=/jingyimetal.com/114.114.114.114
 server=/jingyinb.com/114.114.114.114
 server=/jingyingyicheng.com/114.114.114.114
 server=/jingyitech.com/114.114.114.114
