accelerated-domains: add wonjarobot.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90088,6 +90088,7 @@ server=/woniugm.com/114.114.114.114
 server=/woniuhuoche.com/114.114.114.114
 server=/woniupai.net/114.114.114.114
 server=/woniutrip.com/114.114.114.114
+server=/wonjarobot.com/114.114.114.114
 server=/wonmay.com/114.114.114.114
 server=/wonmay.net/114.114.114.114
 server=/wononme.com/114.114.114.114
