accelerated-domains: add gdanano.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33854,6 +33854,7 @@ server=/gdahua.com/114.114.114.114
 server=/gdaii.com/114.114.114.114
 server=/gdairport.com/114.114.114.114
 server=/gdajk.com/114.114.114.114
+server=/gdanano.com/114.114.114.114
 server=/gdapi.net/114.114.114.114
 server=/gdatacube.net/114.114.114.114
 server=/gdatc.net/114.114.114.114
