accelerated-domains: add gdton.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34068,6 +34068,7 @@ server=/gdtextbook.com/114.114.114.114
 server=/gdtianshanoa.com/114.114.114.114
 server=/gdtichy.com/114.114.114.114
 server=/gdtimg.com/114.114.114.114
+server=/gdton.com/114.114.114.114
 server=/gdtone.com/114.114.114.114
 server=/gdtongda.com/114.114.114.114
 server=/gdtongjiang.com/114.114.114.114
