accelerated-domains: add tengyu-group.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82258,6 +82258,7 @@ server=/tengya.com/114.114.114.114
 server=/tengyang666.com/114.114.114.114
 server=/tengye-vc.com/114.114.114.114
 server=/tengyeshiye.com/114.114.114.114
+server=/tengyu-group.com/114.114.114.114
 server=/tengyuejz.com/114.114.114.114
 server=/tengzhihh.com/114.114.114.114
 server=/tengzhipp.com/114.114.114.114
