accelerated-domains: add asiasymbol.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12082,6 +12082,7 @@ server=/asianmetal.com/114.114.114.114
 server=/asiarobot.net/114.114.114.114
 server=/asiaseiki.com/114.114.114.114
 server=/asiasolar.net/114.114.114.114
+server=/asiasymbol.com/114.114.114.114
 server=/asiatelco.com/114.114.114.114
 server=/asiayun.com/114.114.114.114
 server=/asiet.net/114.114.114.114
