accelerated-domains: add gdjysteel.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33963,6 +33963,7 @@ server=/gdjshd.com/114.114.114.114
 server=/gdjsxh.com/114.114.114.114
 server=/gdjuhan.com/114.114.114.114
 server=/gdjuntai.com/114.114.114.114
+server=/gdjysteel.com/114.114.114.114
 server=/gdjyw.com/114.114.114.114
 server=/gdjzcw.com/114.114.114.114
 server=/gdk-link.com/114.114.114.114
