accelerated-domains: add htsprings.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43879,6 +43879,7 @@ server=/htsec.com/114.114.114.114
 server=/htsec.net/114.114.114.114
 server=/htsham.com/114.114.114.114
 server=/htslauto.com/114.114.114.114
+server=/htsprings.com/114.114.114.114
 server=/htsubsea.com/114.114.114.114
 server=/httdsj.com/114.114.114.114
 server=/htths.com/114.114.114.114
