accelerated-domains: add gdbidding.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33866,6 +33866,7 @@ server=/gdbaishun.net/114.114.114.114
 server=/gdbbk.com/114.114.114.114
 server=/gdbenke.com/114.114.114.114
 server=/gdbhnk.com/114.114.114.114
+server=/gdbidding.com/114.114.114.114
 server=/gdbita.com/114.114.114.114
 server=/gdbljd.com/114.114.114.114
 server=/gdbmh.com/114.114.114.114
