accelerated-domains: add gdhxgf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33947,6 +33947,7 @@ server=/gdhtcm.com/114.114.114.114
 server=/gdhuana.com/114.114.114.114
 server=/gdhwater.com/114.114.114.114
 server=/gdhwjl.com/114.114.114.114
+server=/gdhxgf.com/114.114.114.114
 server=/gdicoou.com/114.114.114.114
 server=/gdie.com/114.114.114.114
 server=/gdinfo.net/114.114.114.114
