accelerated-domains: add gdyqxc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34129,6 +34129,7 @@ server=/gdyjs.com/114.114.114.114
 server=/gdykhb.net/114.114.114.114
 server=/gdylhp.com/114.114.114.114
 server=/gdyngl.com/114.114.114.114
+server=/gdyqxc.com/114.114.114.114
 server=/gdysnk.com/114.114.114.114
 server=/gdytc.com/114.114.114.114
 server=/gdyuanshun.com/114.114.114.114
