accelerated-domains: add yitongguan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97348,6 +97348,7 @@ server=/yiticm.com/114.114.114.114
 server=/yitijizhi.com/114.114.114.114
 server=/yitisports.com/114.114.114.114
 server=/yitong-trade.com/114.114.114.114
+server=/yitongguan.com/114.114.114.114
 server=/yitongmedia.com/114.114.114.114
 server=/yitonyiqi.com/114.114.114.114
 server=/yits055.com/114.114.114.114
