accelerated-domains: add yltender.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97733,6 +97733,7 @@ server=/ylsxyjy.com/114.114.114.114
 server=/ylszm.com/114.114.114.114
 server=/ylt2008.com/114.114.114.114
 server=/yltapi.com/114.114.114.114
+server=/yltender.com/114.114.114.114
 server=/yltlgjzx.com/114.114.114.114
 server=/yltpcb.com/114.114.114.114
 server=/ylturl.com/114.114.114.114
