accelerated-domains: add yungbang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99428,6 +99428,7 @@ server=/yunfuwuqiba.com/114.114.114.114
 server=/yungangbj.com/114.114.114.114
 server=/yungao-ssp.com/114.114.114.114
 server=/yungao.mobi/114.114.114.114
+server=/yungbang.com/114.114.114.114
 server=/yungongchang.com/114.114.114.114
 server=/yungou618.com/114.114.114.114
 server=/yungouos.com/114.114.114.114
