accelerated-domains: add victorybio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86558,6 +86558,7 @@ server=/vicsdf.com/114.114.114.114
 server=/vicsz.com/114.114.114.114
 server=/victim.xn--vuq861b/114.114.114.114
 server=/victory-inflight.com/114.114.114.114
+server=/victorybio.com/114.114.114.114
 server=/viczz.com/114.114.114.114
 server=/vida-bio.com/114.114.114.114
 server=/viday.org/114.114.114.114
